[gd_scene load_steps=6 format=2]

[ext_resource path="res://levels/level0.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/hud.gd" type="Script" id=2]
[ext_resource path="res://scripts/game.gd" type="Script" id=4]
[ext_resource path="res://themes/hud.tres" type="Theme" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="game" type="Node2D"]
script = ExtResource( 4 )

[node name="canvas" type="CanvasLayer" parent="."]

[node name="levelComplete" type="Control" parent="canvas"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="canvas/levelComplete"]
margin_right = 1280.0
margin_bottom = 768.0
color = Color( 0, 0, 0, 0.768627 )

[node name="CenterContainer" type="CenterContainer" parent="canvas/levelComplete"]
margin_right = 1280.0
margin_bottom = 768.0

[node name="Label" type="Label" parent="canvas/levelComplete/CenterContainer"]
margin_left = 442.0
margin_top = 342.0
margin_right = 837.0
margin_bottom = 426.0
theme = ExtResource( 5 )
text = "Level Complete!"

[node name="game_screen" type="Control" parent="canvas"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="hud" type="MarginContainer" parent="canvas/game_screen"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_left = 20

[node name="GridContainer" type="VBoxContainer" parent="canvas/game_screen/hud"]
margin_left = 20.0
margin_right = 1260.0
margin_bottom = 768.0

[node name="HBoxContainer" type="HBoxContainer" parent="canvas/game_screen/hud/GridContainer"]
margin_right = 1240.0
margin_bottom = 90.0

[node name="labMoves" type="Label" parent="canvas/game_screen/hud/GridContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 221.0
margin_bottom = 87.0
theme = ExtResource( 5 )
text = "Moves: 0"

[node name="spacer" type="Control" parent="canvas/game_screen/hud/GridContainer/HBoxContainer"]
margin_left = 225.0
margin_right = 1047.0
margin_bottom = 90.0
grow_horizontal = 2
size_flags_horizontal = 3

[node name="btnRestart" type="Button" parent="canvas/game_screen/hud/GridContainer/HBoxContainer"]
margin_left = 1051.0
margin_right = 1166.0
margin_bottom = 90.0
theme = ExtResource( 5 )
text = "RST"

[node name="spacer2" type="VSeparator" parent="canvas/game_screen/hud/GridContainer/HBoxContainer"]
margin_left = 1170.0
margin_right = 1190.0
margin_bottom = 90.0
grow_horizontal = 2
size_flags_horizontal = 0
custom_constants/separation = 20
custom_styles/separator = SubResource( 1 )

[node name="btnMenu" type="Button" parent="canvas/game_screen/hud/GridContainer/HBoxContainer"]
margin_left = 1194.0
margin_right = 1240.0
margin_bottom = 90.0
theme = ExtResource( 5 )
text = "||"

[node name="spacer" type="Control" parent="canvas/game_screen/hud/GridContainer"]
margin_top = 94.0
margin_right = 1240.0
margin_bottom = 680.0
grow_vertical = 2
size_flags_vertical = 3

[node name="labLevel" type="Label" parent="canvas/game_screen/hud/GridContainer"]
margin_top = 684.0
margin_right = 1240.0
margin_bottom = 768.0
theme = ExtResource( 5 )
text = "Level 1	"

[node name="board" type="Node2D" parent="."]

[node name="level0" parent="board" instance=ExtResource( 1 )]

[connection signal="pressed" from="canvas/game_screen/hud/GridContainer/HBoxContainer/btnRestart" to="." method="_on_btnRestart_pressed"]
